Fix horizontal scrolling on mobile
The slack section's padding always made it bigger than the page width.

--- a/_sass/modules/_slack.sass
+++ b/_sass/modules/_slack.sass
@@ -1,6 +1,5 @@
 .slack
   width: 100%
-  padding: 20px
   text-align: center
 
   .button
